k8s/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-virtual-service
  namespace: default
spec:
  hosts:
  - python.example.net
  gateways:
  - services-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: c-mtls-service
        port:
          number: 5002
